[gd_scene load_steps=11 format=2]

[ext_resource path="res://Video/Animacion1VideoJuego.ogv" type="VideoStream" id=1]
[ext_resource path="res://Video1.gd" type="Script" id=2]
[ext_resource path="res://Assets/fonts/Superado.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/fonts/Inconsolata-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.290196, 0.27451, 0.27451, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.290196, 0.27451, 0.27451, 1 )
border_width_bottom = 4
border_color = Color( 0.180392, 0.168627, 0.168627, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id=4]
Button/styles/hover = SubResource( 2 )
Button/styles/normal = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=1]
resource_name = "Transition"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_animation_end"
} ]
}

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 4 )

[node name="Video1" type="Node2D"]
script = ExtResource( 2 )

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_top = -53.0
margin_right = 1028.0
margin_bottom = 652.0
stream = ExtResource( 1 )
volume_db = 5.0
autoplay = true

[node name="Button" type="Button" parent="."]
margin_left = 916.0
margin_top = 554.0
margin_right = 1013.0
margin_bottom = 593.0
theme = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Skip"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Transition = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 1028.0
margin_bottom = 603.0
color = Color( 1, 1, 1, 0 )

[node name="Label1" type="Label" parent="."]
visible = false
modulate = Color( 1, 0.968627, 0, 1 )
margin_left = -269.0
margin_top = 447.0
margin_right = 1306.0
margin_bottom = 671.0
custom_fonts/font = SubResource( 6 )
text = "AH! Que asco de vida, daría lo que fuera 
por un poco de emoción"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
visible = false
modulate = Color( 1, 0.968627, 0, 1 )
margin_left = -269.0
margin_top = 447.0
margin_right = 1306.0
margin_bottom = 671.0
custom_fonts/font = SubResource( 6 )
text = "¿QUÉ?, ¿Qué fue eso?"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
visible = false
modulate = Color( 1, 0.968627, 0, 1 )
margin_left = -269.0
margin_top = 447.0
margin_right = 1306.0
margin_bottom = 671.0
custom_fonts/font = SubResource( 6 )
text = "¿Lo que sea has dicho?"
align = 1
valign = 1

[node name="Label4" type="Label" parent="."]
visible = false
modulate = Color( 1, 0.968627, 0, 1 )
margin_left = -269.0
margin_top = 447.0
margin_right = 1306.0
margin_bottom = 671.0
custom_fonts/font = SubResource( 6 )
text = "Si demuestras que eres lo suficientemente fuerte 
 para superar mi reto"
align = 1
valign = 1

[node name="Label5" type="Label" parent="."]
visible = false
modulate = Color( 1, 0.968627, 0, 1 )
margin_left = -269.0
margin_top = 447.0
margin_right = 1306.0
margin_bottom = 671.0
custom_fonts/font = SubResource( 6 )
text = "Te consderé todos tus deseos"
align = 1
valign = 1

[node name="Label6" type="Label" parent="."]
visible = false
modulate = Color( 1, 0.968627, 0, 1 )
margin_left = -269.0
margin_top = 447.0
margin_right = 1306.0
margin_bottom = 671.0
custom_fonts/font = SubResource( 6 )
text = "Si fallas"
align = 1
valign = 1

[node name="Label7" type="Label" parent="."]
visible = false
modulate = Color( 1, 0.968627, 0, 1 )
margin_left = -269.0
margin_top = 447.0
margin_right = 1306.0
margin_bottom = 671.0
custom_fonts/font = SubResource( 6 )
text = "MORIRÁS"
align = 1
valign = 1

[node name="Label8" type="Label" parent="."]
visible = false
modulate = Color( 1, 0.968627, 0, 1 )
margin_left = -269.0
margin_top = 447.0
margin_right = 1306.0
margin_bottom = 671.0
custom_fonts/font = SubResource( 6 )
text = "Acepto"
align = 1
valign = 1

[node name="Timer1" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Timer4" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Timer5" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer6" type="Timer" parent="."]
wait_time = 4.5
one_shot = true

[node name="Timer7" type="Timer" parent="."]
wait_time = 2.75
one_shot = true

[node name="Timer8" type="Timer" parent="."]
one_shot = true

[node name="Timer9" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer10" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer11" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="finished" from="VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer1" to="." method="_on_Timer1_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="Timer5" to="." method="_on_Timer5_timeout"]
[connection signal="timeout" from="Timer6" to="." method="_on_Timer6_timeout"]
[connection signal="timeout" from="Timer7" to="." method="_on_Timer7_timeout"]
[connection signal="timeout" from="Timer8" to="." method="_on_Timer8_timeout"]
[connection signal="timeout" from="Timer9" to="." method="_on_Timer9_timeout"]
[connection signal="timeout" from="Timer10" to="." method="_on_Timer10_timeout"]
[connection signal="timeout" from="Timer11" to="." method="_on_Timer11_timeout"]
